--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -14,7 +14,7 @@
 
 #hero {
     display: grid;
-    grid-template-columns: 75vw 25vw;
+    grid-template-columns: 70vw 30vw;
     height: 100%;
 }
 
